add keyword for searchability

--- a/modules/nf-core/jvarkit/sam2tsv/meta.yml
+++ b/modules/nf-core/jvarkit/sam2tsv/meta.yml
@@ -3,6 +3,7 @@ description: Convert sam files to tsv files
 keywords:
   - sam
   - tsv
+  - jvarkit
 tools:
   - "jvarkit":
       description: "Java utilities for Bioinformatics."
