--- a/modules/nf-core/motus/preplong/meta.yml
+++ b/modules/nf-core/motus/preplong/meta.yml
@@ -40,7 +40,7 @@ output:
       - "*.gz":
           type: file
           description: converted file (gzipped), ready to be used by motus profile
-          pattern: "*.{gz}"
+          pattern: "*.gz"
   - versions:
       type: file
       description: File containing software versions
