chore: Opt-in @edmundmiller to CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,11 @@
 .github/workflows/** @nf-core/a-team
 tests/config @nf-core/a-team
+
+# Opt-in
+modules/nf-core/bedtools/** @edmundmiller
+modules/nf-core/dragmap/** @edmundmiller
+modules/nf-core/homer/** @edmundmiller
+modules/nf-core/pints/caller/** @edmundmiller
+modules/nf-core/preseq/ccurve/** @edmundmiller
+modules/nf-core/preseq/lcextrap/** @edmundmiller
+subworkflows/nf-core/homer/** @edmundmiller
