use seqera containers + nf-test; rm pytests

--- a/modules/nf-core/pangolin/meta.yml
+++ b/modules/nf-core/pangolin/meta.yml
@@ -5,7 +5,7 @@ keywords:
   - pangolin
   - lineage
 tools:
-  - star:
+  - pangolin:
       description: |
         Phylogenetic Assignment of Named Global Outbreak LINeages
       homepage: https://github.com/cov-lineages/pangolin#pangolearn-description
@@ -22,6 +22,10 @@ input:
         description: |
           The genome assembly to be evaluated
 output:
+  - meta:
+      type: map
+      description: |
+        Groovy Map containing sample information
   - report:
       - meta:
           type: file
