--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,7 +4,10 @@ tests/config @nf-core/a-team
 # Opt-in
 modules/nf-core/bedtools/** @edmundmiller
 modules/nf-core/dragmap/** @edmundmiller
+modules/nf-core/ensemblvep/** @maxulysse
+modules/nf-core/gatk4/** @maxulysse
 modules/nf-core/homer/** @edmundmiller
+modules/nf-core/snpeff/** @maxulysse
 modules/nf-core/pints/caller/** @edmundmiller
 modules/nf-core/preseq/ccurve/** @edmundmiller
 modules/nf-core/preseq/lcextrap/** @edmundmiller
