update formatting errors

--- a/modules/nf-core/bamtofastq10x/environment.yml
+++ b/modules/nf-core/bamtofastq10x/environment.yml
@@ -1,4 +1,4 @@
----
+name: bamtofastq10x
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
