--- a/modules/nf-core/bamtofastq10x/meta.yml
+++ b/modules/nf-core/bamtofastq10x/meta.yml
@@ -21,15 +21,15 @@ tools:
       licence: ["MIT"]
       identifier: ""
 input:
-  - - meta:
-        type: map
-        description: |
-          Groovy Map containing sample information
-          e.g. `[ id:'sample1', single_end:false ]`
-    - bam:
-        type: file
-        description: BAM file
-        pattern: "*.bam"
+  - meta:
+      type: map
+      description: |
+        Groovy Map containing sample information
+        e.g. `[ id:'sample1', single_end:false ]`
+  - bam:
+      type: file
+      description: BAM file
+      pattern: "*.bam"
 output:
   - fastq:
       - meta:
