add docker config

--- a/modules/nf-core/star/align/tests/nextflow.config
+++ b/modules/nf-core/star/align/tests/nextflow.config
@@ -10,6 +10,4 @@ process {
 
 }
 
-docker {
-    runOptions = '--platform=linux/amd64'
-}
+docker.runOptions = '--platform=linux/amd64 -u $(id -u):$(id -g)'
