--- a/modules/nf-core/arriba/download/environment.yml
+++ b/modules/nf-core/arriba/download/environment.yml
@@ -1,9 +1,5 @@
----
-# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
-name: "arriba_download"
 channels:
   - conda-forge
   - bioconda
-  - defaults
 dependencies:
-  - "bioconda::arriba=2.4.0"
+  - bioconda::arriba=2.4.0
