--- a/modules/nf-core/samshee/environment.yml
+++ b/modules/nf-core/samshee/environment.yml
@@ -3,6 +3,5 @@ channels:
   - bioconda
 dependencies:
   - python>=3.9
-  - pip
-  - pip: # FIXME https://github.com/nf-core/modules/issues/5814
+  - pip:
       - samshee==0.2.1
