--- a/modules/nf-core/samshee/meta.yml
+++ b/modules/nf-core/samshee/meta.yml
@@ -13,15 +13,15 @@ tools:
       tool_dev_url: https://github.com/lit-regensburg/samshee
       licence: [MIT license]
 input:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test', lane:1 ]
-  - samplesheet:
-      type: file
-      description: "illumina v2 samplesheet"
-      pattern: "*.{csv}"
+  - - meta:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. [ id:'test', lane:1 ]
+    - samplesheet:
+        type: file
+        description: "illumina v2 samplesheet"
+        pattern: "*.{csv}"
 output:
   - versions:
       type: file
