--- a/modules/nf-core/samshee/environment.yml
+++ b/modules/nf-core/samshee/environment.yml
@@ -2,6 +2,7 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - python>=3.9
+  - python=3.12.7
+  - pip # FIXME https://github.com/nf-core/modules/issues/5814
   - pip:
       - samshee==0.2.1
