--- a/modules/nf-core/arriba/arriba/meta.yml
+++ b/modules/nf-core/arriba/arriba/meta.yml
@@ -66,9 +66,9 @@ input:
         description: |
           Groovy Map containing reference information
           e.g. [ id:'test' ]
-    - structural_variants:
+    - cytobands:
         type: file
-        description: Structural variants file
+        description: Cytobands file
         pattern: "*.{tsv}"
   - - meta7:
         type: map
