Add more options

--- a/modules/nf-core/samshee/meta.yml
+++ b/modules/nf-core/samshee/meta.yml
@@ -7,8 +7,7 @@ keywords:
   - bcl2fastq
 tools:
   - samshee:
-      description: A schema-agnostic parser and writer for illumina® sample sheets v2
-        and similar documents.
+      description: A schema-agnostic parser and writer for illumina® sample sheets v2 and similar documents.
       homepage: https://github.com/lit-regensburg/samshee
       documentation: https://github.com/lit-regensburg/samshee/blob/main/README.md
       tool_dev_url: https://github.com/lit-regensburg/samshee
@@ -24,9 +23,15 @@ input:
         type: file
         description: "illumina v2 samplesheet"
         pattern: "*.{csv}"
-  - - validator_schema:
+  - - json_schema_validator:
         type: string
         description: "String in JSON format used additional samplesheet validation settings"
+  - - name_schema_validator:
+        type: string
+        description: "Schema name used additional samplesheet validation settings"
+  - - file_schema_validator:
+        type: string
+        description: "JSON file used additional samplesheet validation settings"
 output:
   - samplesheet:
       - meta:
