--- a/modules/nf-core/maxbin2/meta.yml
+++ b/modules/nf-core/maxbin2/meta.yml
@@ -35,7 +35,7 @@ input:
           supply at the same time as abundance files.
         pattern: "*.fasta"
     - abund:
-        type: file
+        type: file or list of files
         description: Contig abundance files, i.e. reads against each contig. See MaxBin2
           README for details. Do not supply at the same time as read files.
 output:
@@ -60,6 +60,17 @@ output:
           description: Summary file describing which contigs are being classified into
             which bin
           pattern: "*.summary"
+  - abundance:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test', single_end:false ]
+      - "*.abundance":
+          type: file
+          description: Abundance of each bin if multiple abundance files were supplied
+            which bin
+          pattern: "*.abundance"
   - log:
       - meta:
           type: map
