--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -549,6 +549,8 @@ jobs:
           - profile: conda
             path: modules/nf-core/deepvariant/rundeepvariant
           - profile: conda
+            path: modules/nf-core/deepvariant/vcfstatsreport
+          - profile: conda
             path: modules/nf-core/ensemblvep/vep
           - profile: conda
             path: modules/nf-core/fastk/fastk
