Clean up busco busco tests

--- a/modules/nf-core/busco/busco/tests/nextflow.config
+++ b/modules/nf-core/busco/busco/tests/nextflow.config
@@ -1,5 +1,6 @@
 process {
     withName: 'BUSCO_BUSCO' {
-        ext.args = '--tar'
+        // ext.args = '--tar'
+        ext.args = params.busco_args
     }
 }
