text contains test instead, because conda was failing (produces 0s column isntead of a values column)

--- a/modules/nf-core/proovframe/map/meta.yml
+++ b/modules/nf-core/proovframe/map/meta.yml
@@ -1,7 +1,7 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "proovframe_map"
-description: frame-shift correction for long read (meta)genomics
+description: frame-shift correction for long read (meta)genomics - maps proteins to reads
 keywords:
   - frame-shift correction
   - long-read sequencing
