Fix conda env.yml

--- a/modules/nf-core/samshee/environment.yml
+++ b/modules/nf-core/samshee/environment.yml
@@ -2,7 +2,5 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  - bioconda::samshee=0.2.1
   - python=3.13.0
-  - pip
-  - pip: # FIXME https://github.com/nf-core/modules/issues/5814
-      - samshee==0.2.1
