--- a/.github/workflows/nf-test.yml
+++ b/.github/workflows/nf-test.yml
@@ -26,6 +26,21 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
+  get-number-of-shards:
+    runs-on: ubuntu-latest
+    outputs:
+      # Needs to be a json array
+      shards: ${{ steps.shards.outputs.shards }}
+      total_shards: ${{ steps.shards.outputs.total_shards }}
+    steps:
+      - id: shards
+        run: |
+          nftest_output=$(nf-test test --dry-run --changed-since HEAD^ --filter process --follow-dependencies)
+          number_of_shards=$(echo $nftest_output | grep -o 'Found [0-9]* related test' | tail -1 | awk '{print $2}')
+          shards_array=$(for shard in $(seq 1 $number_of_shards); do echo $shard; done | tr ' ' '\n' | jq -R . | jq -s .)
+          echo "shards=${shards_array}" >> $GITHUB_OUTPUT
+          echo "total_shards=${number_of_shards}" >> $GITHUB_OUTPUT
+
   nf-test:
     runs-on: ${{ github.event.inputs.runners || 'self-hosted' }}
     # NOTE I think this is the cleanest way to get them organized
@@ -36,17 +51,19 @@ jobs:
     # ...
     # workflow | singularity | 3
     name: ${{ matrix.filter }} | ${{ matrix.profile }} | ${{ matrix.shard }}
+    needs: get-number-of-shards
+    if: ${{ fromJSON(needs.get-number-of-shards.outputs.shards) != fromJSON('["1", "0"]') }}
     strategy:
       fail-fast: false
       matrix:
         filter: [process, workflow]
         profile: [conda, docker_self_hosted, singularity]
-        shard: [1, 2, 3]
+        shard: ${{ fromJSON(needs.get-number-of-shards.outputs.shards) }}
     env:
       NXF_ANSI_LOG: false
       NXF_VER: "24.04.4"
       NFTEST_VER: "0.9.0"
-      TOTAL_SHARDS: 3
+      TOTAL_SHARDS: ${{ needs.get-number-of-shards.outputs.total_shards }}
       SENTIEON_LICENSE_MESSAGE: ${{ secrets.SENTIEON_LICENSE_MESSAGE }}
       SENTIEON_ENCRYPTION_KEY: ${{ secrets.SENTIEON_ENCRYPTION_KEY }}
 
