--- a/.github/workflows/nf-test.yml
+++ b/.github/workflows/nf-test.yml
@@ -37,6 +37,7 @@ jobs:
         run: |
           nftest_output=$(nf-test test --dry-run --changed-since HEAD^ --filter process --follow-dependencies)
           number_of_shards=$(echo $nftest_output | grep -o 'Found [0-9]* related test' | tail -1 | awk '{print $2}')
+          three_tests_per_shard=$(echo $(($number_of_shards / 3)) | awk '{print int($1+0.5)}')
           shards_array=$(for shard in $(seq 1 $number_of_shards); do echo $shard; done | tr ' ' '\n' | jq -R . | jq -s .)
           echo "shards=${shards_array}" >> $GITHUB_OUTPUT
           echo "total_shards=${number_of_shards}" >> $GITHUB_OUTPUT
