--- a/tests/config/pytest_modules.yml
+++ b/tests/config/pytest_modules.yml
@@ -1,9 +1,18 @@
 amps:
   - modules/nf-core/amps/**
   - tests/modules/nf-core/amps/**
-arriba/arriba:
-  - modules/nf-core/arriba/arriba/**
-  - tests/modules/nf-core/arriba/arriba/**
+angsd/contamination:
+  - modules/nf-core/angsd/contamination/**
+  - tests/modules/nf-core/angsd/contamination/**
+angsd/docounts:
+  - modules/nf-core/angsd/docounts/**
+  - tests/modules/nf-core/angsd/docounts/**
+arcashla/extract:
+  - modules/nf-core/arcashla/extract/**
+  - tests/modules/nf-core/arcashla/extract/**
+ariba/getref:
+  - modules/nf-core/ariba/getref/**
+  - tests/modules/nf-core/ariba/getref/**
 artic/guppyplex:
   - modules/nf-core/artic/guppyplex/**
   - tests/modules/nf-core/artic/guppyplex/**
