new module: bedtools/nuc Change input name from bed to intervals

--- a/modules/nf-core/bedtools/nuc/meta.yml
+++ b/modules/nf-core/bedtools/nuc/meta.yml
@@ -27,7 +27,7 @@ input:
         type: file
         description: Genome reference
         pattern: "*.{fa,fasta}"
-    - bed:
+    - intervals:
         type: file
         description: BED/GFF/VCF file of ranges to extract from -fi
         pattern: "*.{bed,gff,vcf}"
