--- a/modules/nf-core/pangolin/environment.yml
+++ b/modules/nf-core/pangolin/environment.yml
@@ -2,4 +2,5 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - bioconda::pangolin=4.2
+  - bioconda::pangolin=4.3
+  - bioconda::snakemake=7.30.1
