--- a/modules/nf-core/pangolin/environment.yml
+++ b/modules/nf-core/pangolin/environment.yml
@@ -2,5 +2,6 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  - bioconda::pangolin-data=1.30
   - bioconda::pangolin=4.3
   - bioconda::snakemake=7.30.1
