--- a/modules/nf-core/tcoffee/regressive/meta.yml
+++ b/modules/nf-core/tcoffee/regressive/meta.yml
@@ -1,5 +1,5 @@
 name: "tcoffee_regressive"
-description: Aligns sequences using the regressive algorithm as implemented in T_COFFEE
+description: Aligns sequences using the regressive algorithm as implemented in the T_COFFEE package
 keywords:
   - alignment
   - MSA
