--- a/modules/nf-core/sourcepredict/tests/nextflow.config
+++ b/modules/nf-core/sourcepredict/tests/nextflow.config
@@ -1,5 +1,5 @@
 process {
-    withName: 'SNIFFLES' {
-        ext.args = '--minsupport 1 --no-qc --mapq 0'
+    withName: 'SOURCEPREDICT' {
+        ext.args = '--me UMAP'
         }
 }
