--- a/tests/config/test_data.config
+++ b/tests/config/test_data.config
@@ -691,6 +691,13 @@ params {
                 genome_aln_nwk                  = "${params.test_data_base}/data/genomics/prokaryotes/haemophilus_influenzae/genome/genome.aln.nwk"
             }
         }
+        'metagenome' {
+            'taxonomy' {
+                sink_taxid_csv                   = "${params.test_data_base}/data/genomics/prokaryotes/metagenome/taxonomy/misc/sink_taxid.csv"
+                sources_taxid_csv                = "${params.test_data_base}/data/genomics/prokaryotes/metagenome/taxonomy/misc/sources_labels.csv"
+                sources_labels_csv               = "${params.test_data_base}/data/genomics/prokaryotes/metagenome/taxonomy/misc/sources_taxid.csv"
+            }
+        }
         'saccharomyces_cerevisiae' {
             'genome' {
                 samplesheet                     = "${params.test_data_base}/data/genomics/eukaryotes/saccharomyces_cerevisiae/samplesheet.csv"
