--- a/modules/nf-core/pbmm2/environment.yml
+++ b/modules/nf-core/pbmm2/environment.yml
@@ -1,7 +1,9 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
+name: "pbmm2"
 channels:
   - conda-forge
   - bioconda
+  - defaults
 dependencies:
-  - "bioconda::pbsv=2.9.0"
+  - "bioconda::pbmm2=1.14.99"
