--- a/modules/nf-core/pbsv/meta.yml
+++ b/modules/nf-core/pbsv/meta.yml
@@ -1,56 +1,55 @@
----
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "pbsv"
-## TODO nf-core: Add a description of the module and list keywords
-description: write your description here
+description: Pacbio Structural Variant Caller in reads
 keywords:
-  - sort
-  - example
-  - genomics
+  - structural variants
+  - long-read analysis
+  - sequence analysis
 tools:
   - "pbsv":
-      ## TODO nf-core: Add a description and other details for the software below
       description: "pbsv - PacBio structural variant (SV) calling and analysis tools"
-      homepage: "None"
-      documentation: "None"
-      tool_dev_url: "None"
-      doi: ""
+      homepage: "https://github.com/tanyasarkjain/modules/tree/pbsv"
+      documentation: "https://github.com/tanyasarkjain/modules/tree/pbsv"
+      tool_dev_url: "https://github.com/tanyasarkjain/modules/tree/pbsv"
       licence: ["BSD-3-clause-Clear"]
-
-## TODO nf-core: Add a description of all of the variables used as input
+      identifier: ""
 input:
-  # Only when we have meta
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. `[ id:'sample1', single_end:false ]`
-
-  ## TODO nf-core: Delete / customise this example input
-  - bam:
-      type: file
-      description: Sorted BAM/CRAM/SAM file
-      pattern: "*.{bam,cram,sam}"
-
-## TODO nf-core: Add a description of all of the variables used as output
+  - - meta:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. `[ id:'sample1', single_end:false ]`
+    - bam:
+        type: file
+        description: "A BAM file containing an aligned reads"
+        pattern: "*.bam"
+  - - meta2:
+        type: map
+        description: |
+          Groovy Map containing reference information
+          e.g. [ id:'test' ]
+    - fasta:
+        type: file
+        description: Fasta file
 output:
-  #Only when we have meta
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. `[ id:'sample1', single_end:false ]`
-
+  - vcf:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+          pattern: "*.vcf.gz"
+      - "*.vcf":
+          type: file
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+          pattern: "*.vcf.gz"
   - versions:
-      type: file
-      description: File containing software versions
-      pattern: "versions.yml"
-  ## TODO nf-core: Delete / customise this example output
-  - bam:
-      type: file
-      description: Sorted BAM/CRAM/SAM file
-      pattern: "*.{bam,cram,sam}"
-
+      - versions.yml:
+          type: file
+          description: File containing software versions
+          pattern: "versions.yml"
 authors:
   - "@tanyasarkjain"
 maintainers:
