--- a/modules/nf-core/pbsv/meta.yml
+++ b/modules/nf-core/pbsv/meta.yml
@@ -41,9 +41,7 @@ output:
           pattern: "*.vcf.gz"
       - "*.vcf":
           type: file
-          description: |
-            Groovy Map containing sample information
-            e.g. `[ id:'sample1', single_end:false ]`
+          description: VCF file 
           pattern: "*.vcf.gz"
   - versions:
       - versions.yml:
