make the module better

--- a/modules/nf-core/elprep/filter/tests/nextflow.config
+++ b/modules/nf-core/elprep/filter/tests/nextflow.config
@@ -1,5 +1,5 @@
 process {
     withName: ELPREP_FILTER {
-        ext.args = "--mark-duplicates --reference-confidence GVCF"
+        ext.args = "--reference-confidence GVCF"
     }
 }
