--- a/modules/nf-core/glimpse2/concordance/tests/nextflow_R2.config
+++ b/modules/nf-core/glimpse2/concordance/tests/nextflow_R2.config
@@ -1,7 +1,7 @@
 process {
     publishDir = { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" }
 
-    withName:GLIMPSE2_CONCORDANCE_R2_PER_SITE {
+    withName:GLIMPSE2_CONCORDANCE {
         ext.args = "--out-r2-per-site"
     }
 }
