Added me as author

--- a/modules/nf-core/hifiasm/meta.yml
+++ b/modules/nf-core/hifiasm/meta.yml
@@ -160,6 +160,7 @@ authors:
   - "@sidorov-si"
   - "@scorreard"
   - "@mbeavitt"
+  - "@schmytzi"
 maintainers:
   - "@sidorov-si"
   - "@scorreard"
