Updated meta.yml to reflect new input specification.

--- a/modules/nf-core/hifiasm/meta.yml
+++ b/modules/nf-core/hifiasm/meta.yml
@@ -26,18 +26,18 @@ input:
         type: file
         description: FASTQ file with PacBio HiFi reads
         pattern: "*.{fastq}"
-  - - paternal_kmer_dump:
+    - paternal_kmer_dump:
         type: file
         description: Yak kmer dump file for paternal reads (can be used for haplotype
           resolution). It can have an arbitrary extension.
-  - - maternal_kmer_dump:
+    - maternal_kmer_dump:
         type: file
         description: Yak kmer dump file for maternal reads (can be used for haplotype
           resolution). It can have an arbitrary extension.
-  - - hic_read1:
+    - hic_read1:
         type: file
         description: Hi-C data Forward reads.
-  - - hic_read2:
+    - hic_read2:
         type: file
         description: Hi-C data Reverse reads.
 output:
