Add bam test and sort snapshot

--- a/modules/nf-core/stitch/tests/stitch_impute_only.config
+++ b/modules/nf-core/stitch/tests/stitch_impute_only.config
@@ -1,5 +1,5 @@
 process {
-    withName: STITCH_IMPUTE_ONLY {
+    withName: STITCH {
         ext.args2 = "--regenerateInputWithDefaultValues TRUE"
     }
 }
