--- a/modules/nf-core/stitch/environment.yml
+++ b/modules/nf-core/stitch/environment.yml
@@ -2,6 +2,6 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - r::r-base=4.3.1
+  - conda-forge::r-base=4.3.1
   - bioconda::r-stitch=1.6.10
   - bioconda::htslib=1.18
