Limma tests update

--- a/modules/nf-core/limma/differential/meta.yml
+++ b/modules/nf-core/limma/differential/meta.yml
@@ -98,6 +98,9 @@ output:
           type: file
           description: dump of R SessionInfo
           pattern: "*.log"
+  - normalised_counts:
+      - meta: {}
+      - "*.normalised_counts.tsv": {}
   - versions:
       - versions.yml:
           type: file
