Nf-tests update to restore old tests logic

--- a/modules/nf-core/limma/differential/tests/nextflow.exclude_samples.config
+++ b/modules/nf-core/limma/differential/tests/nextflow.exclude_samples.config
@@ -4,11 +4,19 @@ process {
 
     withName: 'LIMMA_DIFFERENTIAL' {
         ext.args = { [
-            "--sample_id_col sample",
-            "--probe_id_col gene_id",
-            "--exclude_samples_col sample",
-            "--exclude_samples_values SRX8042381;SRX8042384"
+            "--sample_id_col name",
+            "--exclude_samples_col name",
+            "--exclude_samples_values Dima_1;Dima_9"
         ].join(' ').trim() }
+    }
+
+    withName: 'AFFY_JUSTRMA' {
+        ext.args = "--sample_name_col name"
+        publishDir = [ enabled: false ]
+    }
+
+    withName: 'UNTAR' {
+        publishDir = [ enabled: false ]
     }
 
 }
