--- a/modules/nf-core/limma/differential/tests/nextflow.config
+++ b/modules/nf-core/limma/differential/tests/nextflow.config
@@ -5,7 +5,7 @@ process {
     withName: 'LIMMA_DIFFERENTIAL' {
         ext.args = { [
             "--sample_id_col name",
-            "--subset_to_contrast_samples TRUE"
+            "--blocking_variables $meta.blocking"
         ].join(' ').trim() }
     }
 
@@ -13,7 +13,6 @@ process {
         ext.args = "--sample_name_col name"
         publishDir = [ enabled: false ]
     }
-
     withName: 'UNTAR' {
         publishDir = [ enabled: false ]
     }
