--- a/modules/nf-core/deepsomatic/meta.yml
+++ b/modules/nf-core/deepsomatic/meta.yml
@@ -1,74 +1,126 @@
----
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "deepsomatic"
-## TODO nf-core: Add a description of the module and list keywords
-description: write your description here
+description: DeepSomatic is an extension of deep learning-based variant caller DeepVariant 
+  that takes aligned reads (in BAM or CRAM format) from tumor and normal data, produces pileup 
+  image tensors from them, classifies each tensor using a convolutional neural network, and 
+  finally reports somatic variants in a standard VCF or gVCF file.
 keywords:
   - variant calling
   - machine learning
   - neural network
 tools:
   - "deepsomatic":
-      ## TODO nf-core: Add a description and other details for the software below
       description: ""
       homepage: "https://github.com/google/deepsomatic"
       documentation: "https://github.com/google/deepsomatic"
       tool_dev_url: "https://github.com/google/deepsomatic"
       doi: "10.1101/2024.08.16.608331"
       licence: ["BSD-3-clause"]
+      identifier: "biotools:deepsomatic"
 
 input:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. `[ id:'sample1', single_end:false ]`
-  - input_normal:
-      type: file
-      description: BAM/CRAM file
-      pattern: "*.bam/cram"
-  - index_normal:
-      type: file
-      description: Index of BAM/CRAM file
-      pattern: "*.bai/crai"
-  - input_tumor:
-      type: file
-      description: BAM/CRAM file
-      pattern: "*.bam/cram"
-  - index_tumor:
-      type: file
-      description: Index of BAM/CRAM file
-      pattern: "*.bai/crai"
-  - intervals:
-      type: file
-      description: Interval file for targeted regions
-      pattern: "*.bed"
+  - - meta:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. [ id:'test', single_end:false ]
+    - input_normal:
+        type: file
+        description: BAM/CRAM file
+        pattern: "*.bam/cram"
+    - index_normal:
+        type: file
+        description: Index of BAM/CRAM file
+        pattern: "*.bai/crai"
+  - - meta2:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. [ id:'test', single_end:false ]
+    - input_tumor:
+        type: file
+        description: BAM/CRAM file
+        pattern: "*.bam/cram"
+    - index_tumor:
+        type: file
+        description: Index of BAM/CRAM file
+        pattern: "*.bai/crai"
+  - - meta3:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. [ id:'test', single_end:false ]
+    - intervals:
+        type: file
+        description: file containing intervals
+  - - meta4:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. [ id:'test', single_end:false ]
+    - fasta:
+        type: file
+        description: The reference fasta file
+        pattern: "*.fasta"
+  - - meta5:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. [ id:'test', single_end:false ]
+    - fai:
+        type: file
+        description: Index of reference fasta file
+        pattern: "*.fai"
+  - - meta6:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. [ id:'test', single_end:false ]
+    - gzi:
+        type: file
+        description: GZI index of reference fasta file
+        pattern: "*.gzi"
 
-  ## TODO nf-core: Delete / customise this example input
-  - bam:
-      type: file
-      description: Sorted BAM/CRAM/SAM file
-      pattern: "*.{bam,cram,sam}"
-
-## TODO nf-core: Add a description of all of the variables used as output
 output:
-  #Only when we have meta
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. `[ id:'sample1', single_end:false ]`
-
+  - vcf:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - ${prefix}.vcf.gz:
+          type: file
+          description: Compressed VCF file
+          pattern: "*.vcf.gz"
+  - vcf_tbi:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - ${prefix}.vcf.gz.tbi: {}
+  - gvcf:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - ${prefix}.g.vcf.gz:
+          type: file
+          description: Compressed GVCF file
+          pattern: "*.g.vcf.gz"
+  - gvcf_tbi:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - ${prefix}.g.vcf.gz.tbi: {}
   - versions:
-      type: file
-      description: File containing software versions
-      pattern: "versions.yml"
-  ## TODO nf-core: Delete / customise this example output
-  - bam:
-      type: file
-      description: Sorted BAM/CRAM/SAM file
-      pattern: "*.{bam,cram,sam}"
-
+      - versions.yml:
+          type: file
+          description: File containing software versions
+          pattern: "versions.yml"
 authors:
   - "@vaxyzek"
 maintainers:
