added test data location to test_data.config

--- a/tests/config/test_data.config
+++ b/tests/config/test_data.config
@@ -696,6 +696,8 @@ params {
                 sink_taxid_csv                   = "${params.test_data_base}/data/genomics/prokaryotes/metagenome/taxonomy/misc/sink_taxid.csv"
                 sources_taxid_csv                = "${params.test_data_base}/data/genomics/prokaryotes/metagenome/taxonomy/misc/sources_labels.csv"
                 sources_labels_csv               = "${params.test_data_base}/data/genomics/prokaryotes/metagenome/taxonomy/misc/sources_taxid.csv"
+                taxa_sqlite 	                 = "${params.test_data_base}/data/genomics/prokaryotes/metagenome/taxonomy/misc/taxa_sqlite.xz"
+                taxa_sqlite_traverse_pkl         = "${params.test_data_base}/data/genomics/prokaryotes/metagenome/taxonomy/misc/taxa_sqlite_traverse.pkl" 
             }
         }
         'saccharomyces_cerevisiae' {
